crates/sotf-plugins/tests/snapshots/render_plan_snapshots__expander__expander__iphone_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "expander",
  "width": 390.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "vertical",
  "knob_size": "xs",
  "group_direction": "column",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "DYNAMICS"
  ],
  "overflow_group_ids": [
    "TIMING",
    "DETECTOR",
    "OUTPUT"
  ],
  "config_controls": [],
  "main_groups": [
    {
      "id": "DYNAMICS",
      "title": "DYNAMICS",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Threshold",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            -80.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 1,
          "param_name": "Ratio",
          "control_type": "vertical_slider",
          "unit": ":1",
          "range": [
            1.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 4,
          "param_name": "Range",
          "control_type": "vertical_slider",
          "unit": "dB",
          "range": [
            0.0,
            80.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Attack",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.1,
            50.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 3,
          "param_name": "Release",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            10.0,
            2000.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 8,
          "param_name": "Mix",
          "control_type": "knob",
          "unit": "%",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 18446744073709551615,
          "param_name": "(meter)",
          "control_type": "bar_meter(-30..0)",
          "unit": "",
          "range": null,
          "read_only": true,
          "enabled": false
        }
      ]
    },
    {
      "id": "TIMING",
      "title": "Hold & lookahead",
      "controls": [
        {
          "param_index": 7,
          "param_name": "Hold",
          "control_type": "vertical_slider",
          "unit": "ms",
          "range": [
            0.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 12,
          "param_name": "Lookahead",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "DETECTOR",
      "title": "Detector & linking",
      "controls": [
        {
          "param_index": 13,
          "param_name": "Detection Mode",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 10,
          "param_name": "Link Channels",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 11,
          "param_name": "Sidechain HPF",
          "control_type": "knob",
          "unit": "Hz",
          "range": [
            0.0,
            500.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    },
    {
      "id": "OUTPUT",
      "title": "Output leveling",
      "controls": [
        {
          "param_index": 9,
          "param_name": "Auto Makeup",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 14,
          "param_name": "Measured Auto Makeup",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Knee & hysteresis",
      "controls": [
        {
          "param_index": 5,
          "param_name": "Knee",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            0.0,
            20.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 6,
          "param_name": "Hysteresis",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            0.0,
            12.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "viz_slots": [
    {
      "viz_type": "transfer_curve",
      "position": "below:DYNAMICS"
    }
  ],
  "dynamic_sections": []
}
